animation removing in footer and fixed overflow

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -12,6 +12,7 @@ html {
 body {
   min-height: 100vh;
   font-size: 1.8rem;
+  overflow-x: hidden;
 }
 
 $font_barlow: "Barlow", sans-serif;
