--- a/styles/_main-container.scss
+++ b/styles/_main-container.scss
@@ -70,6 +70,7 @@
   @include flex(center, center, row);
   position: relative;
   top: -4px;
+  overflow: hidden;
   .audience-img {
     flex: 1 0 50%;
     overflow: hidden;
@@ -348,7 +349,7 @@
       width: 100%;
       height: 2px;
       visibility: hidden;
-      background: $primary_dark_blue;
+      background: hsl(168, 50%, 25%);
       transition: transform 0.3s ease;
       transform: scaleX(0);
     }
